// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pre > Snapshot > should match snapshot in initial state 1`] = `
<div>
  <button
    aria-label="Copy code"
    class="absolute top-[5px] right-2 z-50 cursor-pointer rounded-md p-2 text-foreground-muted transition-all! hover:text-foreground/80 active:scale-90"
    title="Copy code"
    type="button"
  >
    <svg
      class="size-4.5"
      fill="currentColor"
      height="1em"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M216,32H88a8,8,0,0,0-8,8V80H40a8,8,0,0,0-8,8V216a8,8,0,0,0,8,8H168a8,8,0,0,0,8-8V176h40a8,8,0,0,0,8-8V40A8,8,0,0,0,216,32ZM160,208H48V96H160Zm48-48H176V88a8,8,0,0,0-8-8H96V48H208Z"
      />
    </svg>
  </button>
  <pre>
    <code>
      const test = true;
    </code>
  </pre>
</div>
`;

exports[`Pre > Snapshot > should match snapshot with custom props 1`] = `
<div>
  <button
    aria-label="Copy code"
    class="absolute top-[5px] right-2 z-50 cursor-pointer rounded-md p-2 text-foreground-muted transition-all! hover:text-foreground/80 active:scale-90"
    title="Copy code"
    type="button"
  >
    <svg
      class="size-4.5"
      fill="currentColor"
      height="1em"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M216,32H88a8,8,0,0,0-8,8V80H40a8,8,0,0,0-8,8V216a8,8,0,0,0,8,8H168a8,8,0,0,0,8-8V176h40a8,8,0,0,0,8-8V40A8,8,0,0,0,216,32ZM160,208H48V96H160Zm48-48H176V88a8,8,0,0,0-8-8H96V48H208Z"
      />
    </svg>
  </button>
  <pre
    class="custom-class"
    data-language="typescript"
  >
    <code>
      const test: boolean = true;
    </code>
  </pre>
</div>
`;
